--- a/.github/workflows/detect-changes.yml
+++ b/.github/workflows/detect-changes.yml
@@ -5,8 +5,26 @@ on:
       - develop
 
 jobs:
+  check_if_env_changed:
+    runs-on: ubuntu-latest
+    outputs:
+      docs_changed: ${{ steps.check_file_changed.outputs.docs_changed }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 2
+    - shell: pwsh
+      id: check_file_changed
+      run: |
+        $diff = git diff --name-only HEAD^ HEAD
+        $SourceDiff = $diff | Where-Object { $_ -match '^.env' }
+        $HasDiff = $SourceDiff.Length -gt 0
+        Write-Host "::set-output name=docs_changed::$HasDiff"
+    
   comment:
     runs-on: ubuntu-latest
+    needs: [ check_if_env_changed ]
+    if: needs.conditional_job_check_files.outputs.docs_changed == 'True'
     steps:
       - uses: actions/github-script@v5
         with:
