--- a/.github/workflows/detect-changes.yml
+++ b/.github/workflows/detect-changes.yml
@@ -24,7 +24,7 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     needs: [ check_if_env_changed ]
-    if: needs.conditional_job_check_files.outputs.docs_changed == 'True'
+    if: needs.check_if_env_changed.outputs.docs_changed == 'True'
     steps:
       - uses: actions/github-script@v5
         with:
